--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   animate_do: ^4.2.0
+  fluttertoast: ^9.0.0
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_test:
